# bash-clone

./: .gitignore  BashExceptions.h  CMakeLists.txt  Command.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  ExecutionEngine.cpp  ExecutionEngine.h  Interpreter.cpp  Interpreter.h  Job.cpp  Job.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Shell.cpp  Shell.h  Terminal.cpp  Terminal.h  Token.h  engine-tests.cpp  environment-tests.cpp  init  interpreter-tests.cpp  main.cpp  profile  tests.cpp
tests/: engine-tests.cpp  env-test  env-test.c  env.txt  environment-tests.cpp  interpreter-tests.cpp  read-test  return-test  return-test.c  test-env.txt  write-test  write-test.c
